tests/baselines/reference/doYouNeedToChangeYourTargetLibrary.errors.txt
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(2,28): error TS2550: Property 'find' does not exist on type 'string[]'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(5,33): error TS2550: Property 'findIndex' does not exist on type 'string[]'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(8,28): error TS2550: Property 'fill' does not exist on type 'string[]'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(9,34): error TS2550: Property 'copyWithin' does not exist on type 'string[]'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(10,31): error TS2550: Property 'entries' does not exist on type 'string[]'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(11,28): error TS2550: Property 'keys' does not exist on type 'string[]'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(12,30): error TS2550: Property 'values' does not exist on type 'string[]'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(13,40): error TS2550: Property 'from' does not exist on type 'ArrayConstructor'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(14,38): error TS2550: Property 'of' does not exist on type 'ArrayConstructor'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(15,44): error TS2550: Property 'assign' does not exist on type 'ObjectConstructor'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(16,59): error TS2551: Property 'getOwnPropertySymbols' does not exist on type 'ObjectConstructor'. Did you mean 'getOwnPropertyNames'?
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(18,40): error TS2550: Property 'is' does not exist on type 'ObjectConstructor'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(19,52): error TS2551: Property 'setPrototypeOf' does not exist on type 'ObjectConstructor'. Did you mean 'getPrototypeOf'?
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(20,46): error TS2550: Property 'isFinite' does not exist on type 'NumberConstructor'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(21,47): error TS2550: Property 'isInteger' does not exist on type 'NumberConstructor'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(22,43): error TS2550: Property 'isNaN' does not exist on type 'NumberConstructor'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(23,51): error TS2550: Property 'isSafeInteger' does not exist on type 'NumberConstructor'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(24,48): error TS2550: Property 'parseFloat' does not exist on type 'NumberConstructor'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(25,46): error TS2550: Property 'parseInt' does not exist on type 'NumberConstructor'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(26,28): error TS2550: Property 'clz32' does not exist on type 'Math'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(27,27): error TS2550: Property 'imul' does not exist on type 'Math'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(28,27): error TS2551: Property 'sign' does not exist on type 'Math'. Did you mean 'sin'?
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(29,28): error TS2551: Property 'log10' does not exist on type 'Math'. Did you mean 'LOG10E'?
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(30,27): error TS2551: Property 'log2' does not exist on type 'Math'. Did you mean 'LOG2E'?
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(31,28): error TS2550: Property 'log1p' does not exist on type 'Math'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(32,28): error TS2550: Property 'expm1' does not exist on type 'Math'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(33,27): error TS2551: Property 'cosh' does not exist on type 'Math'. Did you mean 'cos'?
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(34,27): error TS2551: Property 'sinh' does not exist on type 'Math'. Did you mean 'sin'?
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(35,27): error TS2551: Property 'tanh' does not exist on type 'Math'. Did you mean 'tan'?
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(36,28): error TS2551: Property 'acosh' does not exist on type 'Math'. Did you mean 'acos'?
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(37,28): error TS2551: Property 'asinh' does not exist on type 'Math'. Did you mean 'asin'?
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(38,28): error TS2551: Property 'atanh' does not exist on type 'Math'. Did you mean 'atan'?
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(39,28): error TS2550: Property 'hypot' does not exist on type 'Math'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(40,28): error TS2550: Property 'trunc' does not exist on type 'Math'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(41,29): error TS2551: Property 'fround' does not exist on type 'Math'. Did you mean 'round'?
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(42,27): error TS2550: Property 'cbrt' does not exist on type 'Math'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(43,16): error TS2583: Cannot find name 'Map'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(44,16): error TS2583: Cannot find name 'Set'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(45,24): error TS2585: 'Promise' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the `lib` compiler option to es2015 or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(46,25): error TS2585: 'Promise' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the `lib` compiler option to es2015 or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(47,28): error TS2585: 'Promise' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the `lib` compiler option to es2015 or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(48,27): error TS2585: 'Promise' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the `lib` compiler option to es2015 or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(49,23): error TS2585: 'Symbol' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the `lib` compiler option to es2015 or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(50,26): error TS2585: 'Symbol' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the `lib` compiler option to es2015 or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(51,20): error TS2583: Cannot find name 'WeakMap'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(52,20): error TS2583: Cannot find name 'WeakMap'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(53,21): error TS2583: Cannot find name 'Iterator'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(54,26): error TS2583: Cannot find name 'AsyncIterator'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(55,34): error TS2550: Property 'codePointAt' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(56,31): error TS2550: Property 'includes' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(57,31): error TS2550: Property 'endsWith' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(58,32): error TS2550: Property 'normalize' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(59,29): error TS2550: Property 'repeat' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(60,33): error TS2550: Property 'startsWith' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(61,29): error TS2550: Property 'anchor' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(62,26): error TS2550: Property 'big' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(63,28): error TS2550: Property 'blink' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(64,27): error TS2550: Property 'bold' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(65,28): error TS2550: Property 'fixed' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(66,32): error TS2550: Property 'fontcolor' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(67,31): error TS2550: Property 'fontsize' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(68,30): error TS2550: Property 'italics' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(69,27): error TS2550: Property 'link' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(70,28): error TS2550: Property 'small' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(71,29): error TS2550: Property 'strike' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(72,26): error TS2550: Property 'sub' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(73,26): error TS2550: Property 'sup' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(74,51): error TS2550: Property 'fromCodePoint' does not exist on type 'StringConstructor'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(75,41): error TS2550: Property 'raw' does not exist on type 'StringConstructor'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(78,32): error TS2550: Property 'includes' does not exist on type 'string[]'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2016' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(81,31): error TS2550: Property 'padStart' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2017' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(82,29): error TS2550: Property 'padEnd' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2017' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(83,44): error TS2550: Property 'values' does not exist on type 'ObjectConstructor'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2017' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(84,45): error TS2550: Property 'entries' does not exist on type 'ObjectConstructor'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2017' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(85,63): error TS2550: Property 'getOwnPropertyDescriptors' does not exist on type 'ObjectConstructor'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2017' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(86,64): error TS2550: Property 'formatToParts' does not exist on type 'DateTimeFormat'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2017' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(87,21): error TS2583: Cannot find name 'Atomics'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2017' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(88,35): error TS2583: Cannot find name 'SharedArrayBuffer'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2017' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(91,32): error TS2585: 'Promise' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the `lib` compiler option to es2015 or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(92,113): error TS2550: Property 'groups' does not exist on type 'RegExpMatchArray'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2018' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(93,111): error TS2550: Property 'groups' does not exist on type 'RegExpExecArray'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2018' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(94,33): error TS2550: Property 'dotAll' does not exist on type 'RegExp'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2018' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(95,38): error TS2550: Property 'PluralRules' does not exist on type 'typeof Intl'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2018' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(96,27): error TS2583: Cannot find name 'AsyncGenerator'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2018' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(97,35): error TS2583: Cannot find name 'AsyncGeneratorFunction'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2018' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(98,26): error TS2583: Cannot find name 'AsyncIterable'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2018' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(99,34): error TS2583: Cannot find name 'AsyncIterableIterator'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2018' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(102,26): error TS2550: Property 'flat' does not exist on type 'undefined[]'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2019' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(103,29): error TS2550: Property 'flatMap' does not exist on type 'undefined[]'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2019' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(104,49): error TS2550: Property 'fromEntries' does not exist on type 'ObjectConstructor'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2019' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(105,32): error TS2550: Property 'trimStart' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2019' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(106,30): error TS2550: Property 'trimEnd' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2019' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(107,31): error TS2550: Property 'trimLeft' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2019' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(108,32): error TS2550: Property 'trimRight' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2019' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(109,31): error TS2585: 'Symbol' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the `lib` compiler option to es2015 or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(112,35): error TS2585: 'Promise' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the `lib` compiler option to es2015 or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(113,31): error TS2550: Property 'matchAll' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2020' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(114,40): error TS2585: 'Symbol' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the `lib` compiler option to es2015 or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(115,20): error TS2583: Cannot find name 'BigInt'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2020' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(118,28): error TS2585: 'Promise' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the `lib` compiler option to es2015 or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(119,33): error TS2550: Property 'replaceAll' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'esnext' or later.
tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts(120,70): error TS2550: Property 'formatToParts' does not exist on type 'NumberFormat'. Do you need to change your target library? Try changing the `lib` compiler option to 'esnext' or later.


==== tests/cases/compiler/doYouNeedToChangeYourTargetLibrary.ts (102 errors) ====
    // es2015
    const testArrayFind = [""].find((val, idx, obj) => {
                               ~~~~
!!! error TS2550: Property 'find' does not exist on type 'string[]'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
        return true;
    });
    const testArrayFindIndex = [""].findIndex((val, idx, obj) => {
                                    ~~~~~~~~~
!!! error TS2550: Property 'findIndex' does not exist on type 'string[]'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
        return true;
    });
    const testArrayFill = [""].fill("fill");
                               ~~~~
!!! error TS2550: Property 'fill' does not exist on type 'string[]'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testArrayCopyWithin = [""].copyWithin(0, 0);
                                     ~~~~~~~~~~
!!! error TS2550: Property 'copyWithin' does not exist on type 'string[]'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testArrayEntries = [""].entries();
                                  ~~~~~~~
!!! error TS2550: Property 'entries' does not exist on type 'string[]'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testArrayKeys = [""].keys();
                               ~~~~
!!! error TS2550: Property 'keys' does not exist on type 'string[]'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testArrayValues = [""].values();
                                 ~~~~~~
!!! error TS2550: Property 'values' does not exist on type 'string[]'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testArrayConstructorFrom = Array.from([]);
                                           ~~~~
!!! error TS2550: Property 'from' does not exist on type 'ArrayConstructor'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testArrayConstructorOf = Array.of([]);
                                         ~~
!!! error TS2550: Property 'of' does not exist on type 'ArrayConstructor'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testObjectConstructorAssign = Object.assign({}, {});
                                               ~~~~~~
!!! error TS2550: Property 'assign' does not exist on type 'ObjectConstructor'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testObjectConstructorGetOwnPropertySymbols = Object.getOwnPropertySymbols({});
                                                              ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2551: Property 'getOwnPropertySymbols' does not exist on type 'ObjectConstructor'. Did you mean 'getOwnPropertyNames'?
!!! related TS2728 /.ts/lib.es5.d.ts:179:5: 'getOwnPropertyNames' is declared here.
    const testObjectConstructorKeys = Object.keys({});
    const testObjectConstructorIs = Object.is({}, {});
                                           ~~
!!! error TS2550: Property 'is' does not exist on type 'ObjectConstructor'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testObjectConstructorSetPrototypeOf = Object.setPrototypeOf({}, {});
                                                       ~~~~~~~~~~~~~~
!!! error TS2551: Property 'setPrototypeOf' does not exist on type 'ObjectConstructor'. Did you mean 'getPrototypeOf'?
!!! related TS2728 /.ts/lib.es5.d.ts:164:5: 'getPrototypeOf' is declared here.
    const testNumberConstructorIsFinite = Number.isFinite(0);
                                                 ~~~~~~~~
!!! error TS2550: Property 'isFinite' does not exist on type 'NumberConstructor'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testNumberConstructorIsInteger = Number.isInteger(0);
                                                  ~~~~~~~~~
!!! error TS2550: Property 'isInteger' does not exist on type 'NumberConstructor'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testNumberConstructorIsNan = Number.isNaN(0);
                                              ~~~~~
!!! error TS2550: Property 'isNaN' does not exist on type 'NumberConstructor'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testNumberConstructorIsSafeInteger = Number.isSafeInteger(0);
                                                      ~~~~~~~~~~~~~
!!! error TS2550: Property 'isSafeInteger' does not exist on type 'NumberConstructor'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testNumberConstructorParseFloat = Number.parseFloat("0");
                                                   ~~~~~~~~~~
!!! error TS2550: Property 'parseFloat' does not exist on type 'NumberConstructor'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testNumberConstructorParseInt = Number.parseInt("0");
                                                 ~~~~~~~~
!!! error TS2550: Property 'parseInt' does not exist on type 'NumberConstructor'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testMathClz32 = Math.clz32(0);
                               ~~~~~
!!! error TS2550: Property 'clz32' does not exist on type 'Math'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testMathImul = Math.imul(0,0);
                              ~~~~
!!! error TS2550: Property 'imul' does not exist on type 'Math'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testMathSign = Math.sign(0);
                              ~~~~
!!! error TS2551: Property 'sign' does not exist on type 'Math'. Did you mean 'sin'?
!!! related TS2728 /.ts/lib.es5.d.ts:713:5: 'sin' is declared here.
    const testMathLog10 = Math.log10(0);
                               ~~~~~
!!! error TS2551: Property 'log10' does not exist on type 'Math'. Did you mean 'LOG10E'?
!!! related TS2728 /.ts/lib.es5.d.ts:627:14: 'LOG10E' is declared here.
    const testMathLog2 = Math.log2(0);
                              ~~~~
!!! error TS2551: Property 'log2' does not exist on type 'Math'. Did you mean 'LOG2E'?
!!! related TS2728 /.ts/lib.es5.d.ts:625:14: 'LOG2E' is declared here.
    const testMathLog1p = Math.log1p(0);
                               ~~~~~
!!! error TS2550: Property 'log1p' does not exist on type 'Math'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testMathExpm1 = Math.expm1(0);
                               ~~~~~
!!! error TS2550: Property 'expm1' does not exist on type 'Math'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testMathCosh = Math.cosh(0);
                              ~~~~
!!! error TS2551: Property 'cosh' does not exist on type 'Math'. Did you mean 'cos'?
!!! related TS2728 /.ts/lib.es5.d.ts:670:5: 'cos' is declared here.
    const testMathSinh = Math.sinh(0);
                              ~~~~
!!! error TS2551: Property 'sinh' does not exist on type 'Math'. Did you mean 'sin'?
!!! related TS2728 /.ts/lib.es5.d.ts:713:5: 'sin' is declared here.
    const testMathTanh = Math.tanh(0);
                              ~~~~
!!! error TS2551: Property 'tanh' does not exist on type 'Math'. Did you mean 'tan'?
!!! related TS2728 /.ts/lib.es5.d.ts:723:5: 'tan' is declared here.
    const testMathAcosh = Math.acosh(0);
                               ~~~~~
!!! error TS2551: Property 'acosh' does not exist on type 'Math'. Did you mean 'acos'?
!!! related TS2728 /.ts/lib.es5.d.ts:644:5: 'acos' is declared here.
    const testMathAsinh = Math.asinh(0);
                               ~~~~~
!!! error TS2551: Property 'asinh' does not exist on type 'Math'. Did you mean 'asin'?
!!! related TS2728 /.ts/lib.es5.d.ts:649:5: 'asin' is declared here.
    const testMathAtanh = Math.atanh(0);
                               ~~~~~
!!! error TS2551: Property 'atanh' does not exist on type 'Math'. Did you mean 'atan'?
!!! related TS2728 /.ts/lib.es5.d.ts:654:5: 'atan' is declared here.
    const testMathHypot = Math.hypot(0,0);
                               ~~~~~
!!! error TS2550: Property 'hypot' does not exist on type 'Math'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testMathTrunc = Math.trunc(0);
                               ~~~~~
!!! error TS2550: Property 'trunc' does not exist on type 'Math'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testMathFround = Math.fround(0);
                                ~~~~~~
!!! error TS2551: Property 'fround' does not exist on type 'Math'. Did you mean 'round'?
!!! related TS2728 /.ts/lib.es5.d.ts:708:5: 'round' is declared here.
    const testMathCbrt = Math.cbrt(0);
                              ~~~~
!!! error TS2550: Property 'cbrt' does not exist on type 'Math'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testMap: Map<any, any> = null as any;
                   ~~~
!!! error TS2583: Cannot find name 'Map'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testSet: Set<any> = null as any;
                   ~~~
!!! error TS2583: Cannot find name 'Set'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testPromiseAll = Promise.all([]);
                           ~~~~~~~
!!! error TS2585: 'Promise' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the `lib` compiler option to es2015 or later.
    const testPromiseRace = Promise.race([]);
                            ~~~~~~~
!!! error TS2585: 'Promise' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the `lib` compiler option to es2015 or later.
    const testPromiseResolve = Promise.resolve();
                               ~~~~~~~
!!! error TS2585: 'Promise' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the `lib` compiler option to es2015 or later.
    const testPromiseReject = Promise.reject();
                              ~~~~~~~
!!! error TS2585: 'Promise' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the `lib` compiler option to es2015 or later.
    const testSymbolFor = Symbol.for('a');
                          ~~~~~~
!!! error TS2585: 'Symbol' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the `lib` compiler option to es2015 or later.
    const testSymbolKeyFor = Symbol.keyFor(testSymbolFor);
                             ~~~~~~
!!! error TS2585: 'Symbol' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the `lib` compiler option to es2015 or later.
    const testWeakMap: WeakMap<any, any> = null as any;
                       ~~~~~~~
!!! error TS2583: Cannot find name 'WeakMap'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testWeakSet: WeakMap<any, any> = null as any;
                       ~~~~~~~
!!! error TS2583: Cannot find name 'WeakMap'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testIterator: Iterator<any, any, any> = null as any;
                        ~~~~~~~~
!!! error TS2583: Cannot find name 'Iterator'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testAsyncIterator: AsyncIterator<any, any, any> = null as any;
                             ~~~~~~~~~~~~~
!!! error TS2583: Cannot find name 'AsyncIterator'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testStringCodePointAt = "".codePointAt(0);
                                     ~~~~~~~~~~~
!!! error TS2550: Property 'codePointAt' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testStringIncludes = "".includes("");
                                  ~~~~~~~~
!!! error TS2550: Property 'includes' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testStringEndsWith = "".endsWith("");
                                  ~~~~~~~~
!!! error TS2550: Property 'endsWith' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testStringNormalize = "".normalize();
                                   ~~~~~~~~~
!!! error TS2550: Property 'normalize' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testStringRepeat = "".repeat(0);
                                ~~~~~~
!!! error TS2550: Property 'repeat' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testStringStartsWith = "".startsWith("");
                                    ~~~~~~~~~~
!!! error TS2550: Property 'startsWith' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testStringAnchor = "".anchor("");
                                ~~~~~~
!!! error TS2550: Property 'anchor' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testStringBig = "".big();
                             ~~~
!!! error TS2550: Property 'big' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testStringBlink = "".blink();
                               ~~~~~
!!! error TS2550: Property 'blink' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testStringBold = "".bold();
                              ~~~~
!!! error TS2550: Property 'bold' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testStringFixed = "".fixed();
                               ~~~~~
!!! error TS2550: Property 'fixed' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testStringFontColor = "".fontcolor("blue");
                                   ~~~~~~~~~
!!! error TS2550: Property 'fontcolor' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testStringFontSize = "".fontsize(0);
                                  ~~~~~~~~
!!! error TS2550: Property 'fontsize' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testStringItalics = "".italics();
                                 ~~~~~~~
!!! error TS2550: Property 'italics' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testStringLink = "".link("");
                              ~~~~
!!! error TS2550: Property 'link' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testStringSmall = "".small();
                               ~~~~~
!!! error TS2550: Property 'small' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testStringStrike = "".strike();
                                ~~~~~~
!!! error TS2550: Property 'strike' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testStringSub = "".sub();
                             ~~~
!!! error TS2550: Property 'sub' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testStringSup = "".sup();
                             ~~~
!!! error TS2550: Property 'sup' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testStringConstructorFromCodePoint = String.fromCodePoint();
                                                      ~~~~~~~~~~~~~
!!! error TS2550: Property 'fromCodePoint' does not exist on type 'StringConstructor'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    const testStringConstructorRaw = String.raw``;
                                            ~~~
!!! error TS2550: Property 'raw' does not exist on type 'StringConstructor'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2015' or later.
    
    // es2016
    const testIncludes = ["hello"].includes("world");
                                   ~~~~~~~~
!!! error TS2550: Property 'includes' does not exist on type 'string[]'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2016' or later.
    
    // es2017
    const testStringPadStart = "".padStart(2);
                                  ~~~~~~~~
!!! error TS2550: Property 'padStart' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2017' or later.
    const testStringPadEnd = "".padEnd(2);
                                ~~~~~~
!!! error TS2550: Property 'padEnd' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2017' or later.
    const testObjectConstructorValues = Object.values({});
                                               ~~~~~~
!!! error TS2550: Property 'values' does not exist on type 'ObjectConstructor'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2017' or later.
    const testObjectConstructorEntries = Object.entries({});
                                                ~~~~~~~
!!! error TS2550: Property 'entries' does not exist on type 'ObjectConstructor'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2017' or later.
    const testObjectConstructorGetOwnPropertyDescriptors = Object.getOwnPropertyDescriptors({});
                                                                  ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2550: Property 'getOwnPropertyDescriptors' does not exist on type 'ObjectConstructor'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2017' or later.
    const testIntlFormatToParts = new Intl.DateTimeFormat("en-US").formatToParts();
                                                                   ~~~~~~~~~~~~~
!!! error TS2550: Property 'formatToParts' does not exist on type 'DateTimeFormat'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2017' or later.
    const testAtomics = Atomics.add(new Uint8Array(0), 0, 0);
                        ~~~~~~~
!!! error TS2583: Cannot find name 'Atomics'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2017' or later.
    const testSharedArrayBuffer = new SharedArrayBuffer(5);
                                      ~~~~~~~~~~~~~~~~~
!!! error TS2583: Cannot find name 'SharedArrayBuffer'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2017' or later.
    
    // es2018
    const testPromiseFinally = new Promise(() => {}).finally();
                                   ~~~~~~~
!!! error TS2585: 'Promise' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the `lib` compiler option to es2015 or later.
    const testRegExpMatchArrayGroups = "2019-04-30".match(/(?<year>[0-9]{4})-(?<month>[0-9]{2})-(?<day>[0-9]{2})/g).groups;
                                                                                                                    ~~~~~~
!!! error TS2550: Property 'groups' does not exist on type 'RegExpMatchArray'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2018' or later.
    const testRegExpExecArrayGroups = /(?<year>[0-9]{4})-(?<month>[0-9]{2})-(?<day>[0-9]{2})/g.exec("2019-04-30").groups;
                                                                                                                  ~~~~~~
!!! error TS2550: Property 'groups' does not exist on type 'RegExpExecArray'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2018' or later.
    const testRegExpDotAll = /foo/g.dotAll;
                                    ~~~~~~
!!! error TS2550: Property 'dotAll' does not exist on type 'RegExp'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2018' or later.
    const testIntlPluralRules = new Intl.PluralRules("ar-EG").select(0);
                                         ~~~~~~~~~~~
!!! error TS2550: Property 'PluralRules' does not exist on type 'typeof Intl'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2018' or later.
    const testAsyncGenerator: AsyncGenerator<any> = null as any;
                              ~~~~~~~~~~~~~~
!!! error TS2583: Cannot find name 'AsyncGenerator'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2018' or later.
    const testAsyncGeneratorFunction: AsyncGeneratorFunction = null as any;
                                      ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2583: Cannot find name 'AsyncGeneratorFunction'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2018' or later.
    const testAsyncIterable: AsyncIterable<any> = null as any;
                             ~~~~~~~~~~~~~
!!! error TS2583: Cannot find name 'AsyncIterable'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2018' or later.
    const testAsyncIterableIterator: AsyncIterableIterator<any> = null as any;
                                     ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2583: Cannot find name 'AsyncIterableIterator'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2018' or later.
    
    // es2019
    const testArrayFlat = [].flat();
                             ~~~~
!!! error TS2550: Property 'flat' does not exist on type 'undefined[]'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2019' or later.
    const testArrayFlatMap = [].flatMap();
                                ~~~~~~~
!!! error TS2550: Property 'flatMap' does not exist on type 'undefined[]'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2019' or later.
    const testObjectConstructorFromEntries = Object.fromEntries({});
                                                    ~~~~~~~~~~~
!!! error TS2550: Property 'fromEntries' does not exist on type 'ObjectConstructor'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2019' or later.
    const testStringTrimStart = "".trimStart();
                                   ~~~~~~~~~
!!! error TS2550: Property 'trimStart' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2019' or later.
    const testStringTrimEnd = "".trimEnd();
                                 ~~~~~~~
!!! error TS2550: Property 'trimEnd' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2019' or later.
    const testStringTrimLeft = "".trimLeft();
                                  ~~~~~~~~
!!! error TS2550: Property 'trimLeft' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2019' or later.
    const testStringTrimRight = "".trimRight();
                                   ~~~~~~~~~
!!! error TS2550: Property 'trimRight' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2019' or later.
    const testSymbolDescription = Symbol("foo").description;
                                  ~~~~~~
!!! error TS2585: 'Symbol' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the `lib` compiler option to es2015 or later.
    
    // es2020
    const testPromiseAllSettled = new Promise(() => {}).allSettled();
                                      ~~~~~~~
!!! error TS2585: 'Promise' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the `lib` compiler option to es2015 or later.
    const testStringMatchAll = "".matchAll();
                                  ~~~~~~~~
!!! error TS2550: Property 'matchAll' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2020' or later.
    const testRegExpMatchAll = /matchAll/g[Symbol.matchAll]("matchAll");
                                           ~~~~~~
!!! error TS2585: 'Symbol' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the `lib` compiler option to es2015 or later.
    const testBigInt = BigInt(123);
                       ~~~~~~
!!! error TS2583: Cannot find name 'BigInt'. Do you need to change your target library? Try changing the `lib` compiler option to 'es2020' or later.
    
    // esnext
    const testPromiseAny = new Promise(() => {}).any();
                               ~~~~~~~
!!! error TS2585: 'Promise' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the `lib` compiler option to es2015 or later.
    const testStringReplaceAll = "".replaceAll();
                                    ~~~~~~~~~~
!!! error TS2550: Property 'replaceAll' does not exist on type '""'. Do you need to change your target library? Try changing the `lib` compiler option to 'esnext' or later.
    const testNumberFormatFormatToParts = new Intl.NumberFormat("en-US").formatToParts();
                                                                         ~~~~~~~~~~~~~
!!! error TS2550: Property 'formatToParts' does not exist on type 'NumberFormat'. Do you need to change your target library? Try changing the `lib` compiler option to 'esnext' or later.